--- a/app/src/main/res/layout/bill_show_layout.xml
+++ b/app/src/main/res/layout/bill_show_layout.xml
@@ -160,7 +160,7 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView_buy_and_sell"
+            android:id="@+id/recyclerView_bill"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
