--- a/app/src/main/res/layout/bill_show_item.xml
+++ b/app/src/main/res/layout/bill_show_item.xml
@@ -15,12 +15,13 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
     android:gravity="center">
     <TextView
         android:id="@+id/textView_bill_date"
-        android:padding="@dimen/padding_bit"
+        android:padding="@dimen/padding_xbit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="1396/05/23"
         android:gravity="center"
         android:background="#efefef"
+        android:textSize="@dimen/font_small"
         android:textColor="@color/primary_text"/>
 </LinearLayout>
 
@@ -63,7 +64,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                         android:paddingRight="@dimen/padding_bit"
                         android:text="دریافت نقدی "
                         android:textColor="@color/primary_text"
-                        android:textSize="@dimen/font_medium"
+                        android:textSize="@dimen/font_small"
                         app:fontPath="fonts/IRANSansWeb_Bold.ttf"
                         />
 
@@ -88,7 +89,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                         android:text="23,000,000 "
                         android:maxLines="1"
                         android:textColor="@color/primary_text"
-                        android:textSize="@dimen/font_medium"
+                        android:textSize="@dimen/font_small"
                         app:fontPath="fonts/IRANSansWeb_Bold.ttf" />
 
                     <TextView
@@ -121,12 +122,18 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 
                         <TextView
                             android:id="@+id/textView_bill_vaziat_hesab_text"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="3"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
                             android:text="وضعیت حساب : "
                             android:textColor="@color/primary_text"
                             android:textSize="@dimen/font_small" />
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_weight="4"
+                            android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/textView_bill_vaziat_hesab_mablagh"
@@ -151,11 +158,14 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                             android:textColor="@color/green"
                             android:textSize="@dimen/font_small" />
 
+                        </LinearLayout>
+
                         <ImageView
                             android:padding="@dimen/padding_small"
                             android:adjustViewBounds="true"
                             android:id="@+id/imageView_bill_label"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="2.5"
                             android:layout_height="@dimen/dimen_xxmedium"
                             android:src="@drawable/bestankar"/>
 
