--- a/app/src/main/res/layout/buy_and_sell_3rd_layout.xml
+++ b/app/src/main/res/layout/buy_and_sell_3rd_layout.xml
@@ -44,6 +44,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/textView_buy_and_sell_type_3rd"
                     android:gravity="right"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
