--- a/app/src/main/res/layout/bill_show_layout.xml
+++ b/app/src/main/res/layout/bill_show_layout.xml
@@ -115,6 +115,7 @@
                 android:layout_height="wrap_content"
                 android:completionThreshold="1"
                 android:hint="طرف حساب"
+                android:maxLines="1"
                 android:textColorHint="@color/new_text"
                 android:textColor="@color/new_text"
                 android:background="@android:color/transparent"
