--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -107,6 +107,7 @@
             </RelativeLayout>
 
             <LinearLayout
+                android:visibility="invisible"
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_height="wrap_content"
