--- a/app/src/main/res/layout/buy_and_sell_2nd_layout.xml
+++ b/app/src/main/res/layout/buy_and_sell_2nd_layout.xml
@@ -215,12 +215,13 @@
             android:padding="@dimen/padding_bit">
 
             <ImageView
-                android:id="@+id/imageView_buy_and_sell_2nd_account"
+                android:id="@+id/imageView_buy_and_sell_2nd_bedehi_image"
                 android:layout_width="@dimen/padding_medium"
                 android:layout_height="@dimen/padding_medium"
                 android:gravity="center_vertical"
                 android:src="@drawable/shape_arrow_down"
-                android:tint="@color/red" />
+                android:tint="@color/red"
+                android:layout_marginLeft="@dimen/padding_bit"/>
 
             <TextView
                 android:id="@+id/textView_buy_and_sell_2nd_bedehi_text"
