--- a/app/src/main/res/layout/buy_and_sell_show_item.xml
+++ b/app/src/main/res/layout/buy_and_sell_show_item.xml
@@ -31,7 +31,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -184,6 +188,31 @@
                 android:src="@drawable/arrow_left_image"
                 android:backgroundTint="@color/primary_dark"
                 android:padding="@dimen/padding_medium"/>
+
+        </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:padding="@dimen/padding_large">
+
+            <TextView
+                android:id="@+id/textView_buy_and_sell_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="حذف"
+                android:gravity="center"
+                android:background="@drawable/shape_circle"
+                android:paddingRight="@dimen/padding_spinner"
+                android:paddingTop="@dimen/padding_bit"
+                android:paddingBottom="@dimen/padding_bit"
+                android:paddingLeft="@dimen/padding_spinner"
+                android:textColor="@color/icons"
+                android:backgroundTint="@color/red"
+                android:textSize="@dimen/font_small"/>
 
         </LinearLayout>
 
