--- a/app/src/main/res/layout/buy_and_sell_2nd_layout.xml
+++ b/app/src/main/res/layout/buy_and_sell_2nd_layout.xml
@@ -185,6 +185,9 @@
             android:completionThreshold="1"
             android:hint="طرف حساب"
             android:maxLines="1"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
+            android:lines="1"
             android:textColorHint="@color/new_text"
             android:textColor="@color/new_text"
             android:background="@android:color/transparent"
