--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,11 +36,11 @@
                 android:background="@drawable/shape_underline"
                 android:backgroundTint="@color/icons"
                 android:paddingBottom="@dimen/padding_spinner">
-                <TextView
+                <ImageView
                     android:padding="@dimen/padding_box"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="پارمین"
+                    android:text="سان"
                     android:textColor="@color/icons"
                     android:textSize="@dimen/font_xlarge"
                     android:background="@drawable/shape_underline"
