--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -55,8 +55,6 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:background="@drawable/shape_circle"
-            android:backgroundTint="@android:color/transparent"
             android:paddingRight="@dimen/padding_large"
             android:paddingLeft="@dimen/padding_large"
             android:paddingTop="@dimen/padding_bit"
@@ -177,8 +175,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:background="@drawable/shape_circle"
-                android:backgroundTint="@color/primary_dark"
+                android:background="@drawable/shape_circle_dark"
                 android:paddingRight="@dimen/padding_large"
                 android:paddingLeft="@dimen/padding_large"
                 android:paddingTop="@dimen/padding_bit"
