--- a/app/src/main/res/layout/add_account_layout.xml
+++ b/app/src/main/res/layout/add_account_layout.xml
@@ -205,6 +205,46 @@
         android:gravity="center_vertical"
         android:background="@drawable/shape_border">
         <TextView
+            style="@style/etStyle"
+            android:layout_width="wrap_content"
+            android:visibility="gone"
+            android:id="@+id/textView_add_account_mande"
+            android:hint="آدرس"
+            android:lines="5"
+            android:gravity="top"
+            android:inputType="text"
+            />
+        <EditText
+            style="@style/etStyle"
+            android:id="@+id/editText_add_account_mande"
+            android:hint="مانده اول دوره"
+            android:lines="5"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:gravity="top"
+            android:inputType="number"
+            />
+
+        <Spinner
+            android:id="@+id/spinner_add_account_mande_type"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/font_small"
+            android:textColorHint="#ababab"
+            android:textColor="@color/icons"
+            android:background="@android:color/transparent"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="@dimen/padding_large"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:background="@drawable/shape_border">
+        <TextView
             android:paddingRight="@dimen/padding_spinner"
             android:paddingLeft="@dimen/padding_spinner"
             android:paddingTop="@dimen/padding_large"
