--- a/app/src/main/res/layout/add_account_bank_layout.xml
+++ b/app/src/main/res/layout/add_account_bank_layout.xml
@@ -82,6 +82,7 @@
             style="@style/etStyle"
             android:id="@+id/editText_add_account_banki_shobe_name"
             android:hint="شعبه"
+            android:imeOptions="actionNext"
             android:inputType="text"
             android:nextFocusForward="@+id/spinner_add_product_units_list"
             />
@@ -106,6 +107,7 @@
             style="@style/etStyle"
             android:id="@+id/editText_add_account_banki_card_number"
             android:hint="شماره کارت"
+            android:imeOptions="actionNext"
             android:inputType="phone"
             android:maxLength="19"
             android:nextFocusForward="@+id/editText_add_product_sell_price" />
@@ -131,6 +133,7 @@
             style="@style/etStyle"
             android:id="@+id/editText_add_account_banki_hesab_number"
             android:hint="شماره حساب"
+            android:imeOptions="actionNext"
             android:inputType="number"
             android:nextFocusForward="@+id/editText_add_product_mojoodi"
             />
@@ -156,6 +159,7 @@
             android:id="@+id/editText_add_account_banki_taraz_eftetahie"
             android:hint="تراز افتتاحیه"
             android:layout_width="0dp"
+            android:imeOptions="actionNext"
             android:layout_weight="2"
             android:inputType="number"
             android:nextFocusForward="@+id/editText_add_product_average_price"/>
